# rtmp-camera-pusher

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/cli/: main.cpp
src/common/: AppLocale.cpp  AppLocale.h
src/core/: StreamSession.cpp  StreamSession.h
src/gui/: MainWindow.cpp  MainWindow.h  main.cpp
src/streaming/: RtmpStreamer.cpp  RtmpStreamer.h
